# morfo-tt

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yml
morfo_tt/: main.py  processing.py
