[tool.poetry]
name = "morfo-tt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.5.5"
black = "^24.4.2"
pandas = "^2.2.2"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
